--- a/public/lesson3/index.html
+++ b/public/lesson3/index.html
@@ -63,7 +63,7 @@
 <h5>Setup Sublime Text</h5>
   
 <iframe width="853" height="480" src="http://www.youtube.com/embed/vVLP_C-PGdE?rel=0" frameborder="0" allowfullscreen></iframe><br /><br />
-	<p class=""> <span class="floatright"><a href="/lesson4">Start Lesson 4</a></span></p>
+	<p class=""> 
 
   <br /><br />
 
