--- a/public/lesson2/index.html
+++ b/public/lesson2/index.html
@@ -44,7 +44,7 @@
   <li class="current" ><a href="/lesson2">Lesson 2</a></li>
   <li ><a href="/lesson3">Lesson 3</a></li>
   <li > <a href="/lesson4">Lesson 4</a></li>
-  <li class="unavailable" ><a href="#">Final Project</a></li>
+  <li  ><a href="/finalproject">Final Project</a></li>
 </ul>
 
 </div>
