--- a/public/lesson1/index.html
+++ b/public/lesson1/index.html
@@ -56,7 +56,7 @@
 	<div class="main-body">
   	<h2 class="">Introduction to Html</h2>
     <br/>
-      <h5 class="">What is HTML</h5>
+      <h5 class="">What is HTML?</h5>
       <p>Html is a Markup Language (<strong>HTML</strong> = <strong>H</strong>yper <strong>T</strong>ext <strong>M</strong>arkup <strong>L</strong>anguage) used to write web pages. It
       tells the browser what kind of content is on the page and describes how the browser should display
       this content. Every website online is written in HTML, even this one.</p>
